hphp/test/zend/good/ext-standard-math/is_nan_error.php
<?php
is_nan();
is_nan(23,2,true);
?>