hphp/test/zend/bad/ext/standard/tests/array/bug61058.php
<?php 
array_fill(PHP_INT_MAX, 2, '*');
?>